--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,3 +18,236 @@ body
     font-family: 'Ubuntu', sans-serif;
     background-color: var(--PastelBlue);
 }
+
+.mayor-container{   
+    height: 100%;
+}
+.main-container{
+    width: 100%;
+    height: 100%;
+    background-color: var(--PastelBlue);
+
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 4fr;
+    grid-template-areas: 
+    "header"
+    "main";
+
+    .header{
+        grid-area: header;
+        background-image: url("assets/images/bg-sidebar-mobile.svg");
+        background-size: cover;
+        height: 150px;
+    }
+    .form-container{
+        grid-area: main;
+       
+    }
+    .step1{
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;  
+        height: 100%;
+    }
+    .step2{
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;  
+        height: 100%;
+    }
+    .form{
+        background-color: var(--White);
+        height: 80%;
+        width: 90%;
+        border-radius: 15px;
+        padding-left: 20px;
+        padding-right: 20px;
+        padding-top: 20px;
+        position: relative;
+        top: -25px;
+    }
+}
+
+.step-info-container{
+    display: none;
+}
+.balls-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 20px; 
+    padding-top: 30px; 
+}
+.ball{
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    border: 2px solid var(--Alabaster);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.ball-active{
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    border: 1px solid var(--Alabaster);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--LightBlue);
+}
+.number
+{
+    color: var(--Alabaster);
+    position: relative;
+    top: 8px;
+    font-weight: 700;
+}
+.number-active
+{
+    color: var(--MarineBlue);
+    position: relative;
+    top: 8px;
+    font-weight: 700;
+}
+
+.goback{
+    color: var(--CoolGray);
+    font-size: 1.2rem;
+    font-weight: 700;
+}
+.goback:hover{
+    cursor: pointer;
+}
+.button-next{
+    width: 120px;
+    height: 50px;
+    background-color: var(--MarineBlue);
+    position: relative;
+    top: 50px;
+    display: flex;
+    justify-content: center;
+    border-radius: 10px;
+}
+.button-next:hover{
+    cursor: pointer;
+}
+.pnext{
+    color: whitesmoke;
+    font-size: 1.2rem;
+    position: relative;
+    top: 10px;
+}
+.step-title{
+    font-size: 2.2rem;
+    font-weight: 700;
+}
+.pstep-title{
+    color: var(--CoolGray);
+    font-weight: 700;
+}
+
+.container-buttons{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 80px;
+}
+.firstcontainer{
+    justify-content: flex-end
+}
+
+.invalid{
+    color: red;
+}
+
+
+@media (min-width: 767px)
+{
+    .mayor-container{   
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        padding-top: 50px;
+    }
+    .main-container{
+        width: 80%;
+        height: 80%;
+        background-color: var(--White);
+        border-radius: 15px;
+
+        display: grid;
+        grid-template-columns: 200px 4fr;
+        grid-template-rows: 1fr;
+        grid-template-areas: 
+        "header main";
+        padding: 10px;
+
+        .header{
+            background-image: url("assets/images/bg-sidebar-desktop.svg");
+            background-size: cover;
+            border-radius: 15px;
+            height: 100%;
+        }
+        .form-container{
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;  
+        }
+        .form{
+            background-color: var(--White);
+            height: 100%;
+            width: 100%;
+            border-radius: 0px;
+            position: relative;
+            top: 0px;
+        }
+    }
+
+
+    .balls-container{
+        width: 100%;
+        height: 100%;
+        margin-left: 20px;
+        margin-top: 50px;
+        display: block;
+    }
+    .step{
+        display: flex;
+        gap: 10px;
+        margin-top: 20px;
+    }    
+    .num-step{
+        color: var(--CoolGray);
+        font-weight: 700;
+    }   
+    .step-info{
+        margin-top: -20px;
+        color: var(--Magnolia);
+        font-weight: 700;
+    }
+    .step-info-container{
+        display: block;
+    }
+    .container-buttons
+    {
+        margin-top: 160px;
+    }
+    .button-next{
+        top: 0px;
+    }
+}
+
+@media (min-width: 1200px){
+    .main-container{
+        grid-template-columns: 300px 4fr;
+    }
+    .container-buttons
+    {
+        margin-top: 180px;
+    }
+}
