--- a/src/styles.scss
+++ b/src/styles.scss
@@ -77,7 +77,7 @@ body
         gap: 20px;
         border: 1px solid var(--LightGray);
         border-radius: 10px;
-        padding: 15px;
+        padding: 15px;      
     }
     .plan:hover{
         cursor: pointer;
@@ -91,6 +91,15 @@ body
         border-radius: 10px;
         background-color: var(--LightGray);
     }
+    .plan-addons{
+        justify-content: space-between;
+    }
+    .plan-description2{
+        margin-top: 0px;
+    }
+    .addon{
+       
+    }
     .icon{
         width: 60px;
         height: 60px;
@@ -98,6 +107,12 @@ body
     .pplan{
         color: var(--CoolGray);
         font-size: 1.2rem;
+        font-weight: 700;
+        margin-top: -10px;
+    }
+    .pplan2{
+        color: var(--CoolGray);
+        font-size: 1rem;
         font-weight: 700;
         margin-top: -10px;
     }
@@ -263,6 +278,17 @@ body
 
 .invalid{
     color: red;
+}
+
+.container-confirm{
+    width: 100%;
+    background-color: var(--Magnolia);
+    padding: 10px;
+}
+.first-summary{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
 
 
