--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,10 @@
   <section class="main-container">
     <div class="header">
       <div class="balls-container">
-
         <div class="step">
-          <div class="ball" [class.ball-active]="step === 1"><p class="number" [class.number-active]="step === 1">1</p></div>
+          <div class="ball" [class.ball-active]="step === 1">
+            <p class="number" [class.number-active]="step === 1">1</p>
+          </div>
           <div class="step-info-container">
             <p class="num-step">STEP 1</p>
             <p class="step-info">YOUR INFO</p>
@@ -12,7 +13,9 @@
         </div>
 
         <div class="step">
-          <div class="ball" [class.ball-active]="step === 2"><p class="number" [class.number-active]="step === 2">2</p></div>
+          <div class="ball" [class.ball-active]="step === 2">
+            <p class="number" [class.number-active]="step === 2">2</p>
+          </div>
           <div class="step-info-container">
             <p class="num-step">STEP 2</p>
             <p class="step-info">SELECT PLAN</p>
@@ -20,7 +23,9 @@
         </div>
 
         <div class="step">
-          <div class="ball" [class.ball-active]="step === 3"><p class="number" [class.number-active]="step === 3">3</p></div>
+          <div class="ball" [class.ball-active]="step === 3">
+            <p class="number" [class.number-active]="step === 3">3</p>
+          </div>
           <div class="step-info-container">
             <p class="num-step">STEP 3</p>
             <p class="step-info">ADD-ONS</p>
@@ -28,64 +33,118 @@
         </div>
 
         <div class="step">
-          <div class="ball" [class.ball-active]="step === 4"><p class="number" [class.number-active]="step === 4">4</p></div>
+          <div class="ball" [class.ball-active]="step === 4 || step === 5">
+            <p class="number" [class.number-active]="step === 4 || step === 5">
+              4
+            </p>
+          </div>
           <div class="step-info-container">
             <p class="num-step">STEP 4</p>
             <p class="step-info">SUMMARY</p>
           </div>
         </div>
-        
       </div>
     </div>
     <div class="form-container">
-
       <div class="step1" *ngIf="step === 1">
         <div class="form">
           <h1 class="step-title">Personal Info</h1>
-          <p class="pstep-title">Please provide your name, email address, and phone number</p>
+          <p class="pstep-title">
+            Please provide your name, email address, and phone number
+          </p>
 
           <form class="myform" [formGroup]="form" (ngSubmit)="submitForm()">
             <div class="mb-3">
               <label for="name" class="form-label">Name</label>
-              <input type="text" class="form-control" formControlName="name" id="name" placeholder="e.g. Stephen King">
-              <div *ngIf="!form.get('name')?.valid && (form.get('name')?.dirty || form.get('name')?.touched)">
-                <div *ngIf="form.get('name')?.errors" class="invalid">This field is required!</div>
+              <input
+                type="text"
+                class="form-control"
+                formControlName="name"
+                id="name"
+                placeholder="e.g. Stephen King"
+              />
+              <div
+                *ngIf="
+                  !form.get('name')?.valid &&
+                  (form.get('name')?.dirty || form.get('name')?.touched)
+                "
+              >
+                <div *ngIf="form.get('name')?.errors" class="invalid">
+                  This field is required!
+                </div>
               </div>
             </div>
             <div class="mb-3">
               <label for="email" class="form-label">Email address</label>
-              <input type="email" class="form-control" formControlName="email" id="email" placeholder="e.g. stephenking@lorem.com">
-              <div *ngIf="!form.get('email')?.valid && (form.get('email')?.dirty || form.get('email')?.touched)">
-                <div *ngIf="form.get('email')?.errors" class="invalid">You must enter a valid email!</div>
+              <input
+                type="email"
+                class="form-control"
+                formControlName="email"
+                id="email"
+                placeholder="e.g. stephenking@lorem.com"
+              />
+              <div
+                *ngIf="
+                  !form.get('email')?.valid &&
+                  (form.get('email')?.dirty || form.get('email')?.touched)
+                "
+              >
+                <div *ngIf="form.get('email')?.errors" class="invalid">
+                  You must enter a valid email!
+                </div>
               </div>
             </div>
             <div class="mb-3">
               <label for="phone" class="form-label">Phone Number</label>
-              <input type="number" class="form-control" formControlName="phone" id="phone" placeholder="e.g. +1 234 567 890">
-              <div *ngIf="!form.get('phone')?.valid && (form.get('phone')?.dirty || form.get('phone')?.touched)">
-                <div *ngIf="form.get('phone')?.errors" class="invalid">You must enter a valid phone number!</div>
+              <input
+                type="number"
+                class="form-control"
+                formControlName="phone"
+                id="phone"
+                placeholder="e.g. +1 234 567 890"
+              />
+              <div
+                *ngIf="
+                  !form.get('phone')?.valid &&
+                  (form.get('phone')?.dirty || form.get('phone')?.touched)
+                "
+              >
+                <div *ngIf="form.get('phone')?.errors" class="invalid">
+                  You must enter a valid phone number!
+                </div>
               </div>
             </div>
-          
-            <div class="container-buttons firstcontainer">
-              <button class="button-next" type="submit" [disabled]="!form.valid"><p class="pnext">Next Step</p></button>
-            </div>
 
+            <div class="container-buttons firstcontainer">
+              <button
+                class="button-next"
+                type="submit"
+                [disabled]="!form.valid"
+              >
+                <p class="pnext">Next Step</p>
+              </button>
+            </div>
           </form>
         </div>
       </div>
 
-
       <div class="step2" *ngIf="step === 2">
         <div class="form">
           <h1 class="step-title">Select Your Plan</h1>
-          <p class="pstep-title">You have the option of monthly or yearly billing</p>
+          <p class="pstep-title">
+            You have the option of monthly or yearly billing
+          </p>
           <div class="container-plans" (click)="Arcade()">
             <div class="plan" [class.plan-active]="arcade">
-              <img src="../assets/images/icon-arcade.svg" alt="icon Arcade" class="icon">
+              <img
+                src="../assets/images/icon-arcade.svg"
+                alt="icon Arcade"
+                class="icon"
+              />
               <div class="plan-description">
                 <h5 class="hplan">Arcade</h5>
-                <p class="pplan">$9/mo</p>
+                <p class="pplan" *ngIf="monthly">$9/mo</p>
+                <p class="pplan" *ngIf="!monthly">$90/yr</p>
                 <p class="pfree" *ngIf="!monthly">2 months free</p>
               </div>
             </div>
@@ -93,10 +152,15 @@
 
           <div class="container-plans mt-2" (click)="Advanced()">
             <div class="plan" [class.plan-active]="advanced">
-              <img src="../assets/images/icon-advanced.svg" alt="icon Advanced" class="icon">
+              <img
+                src="../assets/images/icon-advanced.svg"
+                alt="icon Advanced"
+                class="icon"
+              />
               <div class="plan-description">
                 <h5 class="hplan">Advanced</h5>
-                <p class="pplan">$12/mo</p>
+                <p class="pplan" *ngIf="monthly">$12/mo</p>
+                <p class="pplan" *ngIf="!monthly">$120/yr</p>
                 <p class="pfree" *ngIf="!monthly">2 months free</p>
               </div>
             </div>
@@ -104,10 +168,15 @@
 
           <div class="container-plans mt-2" (click)="Pro()">
             <div class="plan" [class.plan-active]="pro">
-              <img src="../assets/images/icon-pro.svg" alt="icon Pro" class="icon">
+              <img
+                src="../assets/images/icon-pro.svg"
+                alt="icon Pro"
+                class="icon"
+              />
               <div class="plan-description">
                 <h5 class="hplan">Pro</h5>
-                <p class="pplan">$15/mo</p>
+                <p class="pplan" *ngIf="monthly">$15/mo</p>
+                <p class="pplan" *ngIf="!monthly">$15/yr</p>
                 <p class="pfree" *ngIf="!monthly">2 months free</p>
               </div>
             </div>
@@ -115,23 +184,34 @@
 
           <div class="container-plans mt-2">
             <div class="container-monthly-selector">
-              <p class="pmonthly" [class.pmonthly-desactive]="!monthly">Monthly</p>
+              <p class="pmonthly" [class.pmonthly-desactive]="!monthly">
+                Monthly
+              </p>
               <div class="switch-container">
-                <div class="switch-ball" [class.switch-ball-desactive]="!monthly" (click)="ChangePlanMonthly()"></div>
-                <div class="switch-ball" [class.switch-ball-desactive]="monthly" (click)="ChangePlanYearly()"></div>
+                <div
+                  class="switch-ball"
+                  [class.switch-ball-desactive]="!monthly"
+                  (click)="ChangePlanMonthly()"
+                ></div>
+                <div
+                  class="switch-ball"
+                  [class.switch-ball-desactive]="monthly"
+                  (click)="ChangePlanYearly()"
+                ></div>
               </div>
-              <p class="pmonthly" [class.pmonthly-desactive]="monthly">Yearly</p>
+              <p class="pmonthly" [class.pmonthly-desactive]="monthly">
+                Yearly
+              </p>
             </div>
           </div>
-          
-         
         </div>
         <div class="container-buttons2">
           <p class="goback" (click)="goBackStep1()">Go Back</p>
-          <div class="button-next2"><p class="pnext" (click)="goStep3()">Next Step</p></div>
+          <div class="button-next2">
+            <p class="pnext" (click)="goStep3()">Next Step</p>
+          </div>
         </div>
       </div>
-
 
       <div class="step2" *ngIf="step === 3">
         <div class="form">
@@ -140,7 +220,12 @@
 
           <div class="container-plans">
             <div class="plan plan-addons" [class.plan-active]="checkedOnline">
-              <input type="checkbox" name="online" id="online" [(ngModel)]="checkedOnline">
+              <input
+                type="checkbox"
+                name="online"
+                id="online"
+                [(ngModel)]="checkedOnline"
+              />
               <div class="plan-description2">
                 <h5 class="hplan">Online Service</h5>
                 <p class="pplan2">Access to multiplayer games</p>
@@ -152,10 +237,16 @@
 
           <div class="container-plans mt-2">
             <div class="plan plan-addons" [class.plan-active]="checkedStorage">
-              <input type="checkbox" name="storage" id="storage" [(ngModel)]="checkedStorage">
+              <input
+                type="checkbox"
+                name="storage"
+                id="storage"
+                [(ngModel)]="checkedStorage"
+                class="checkb"
+              />
               <div class="plan-description2">
                 <h5 class="hplan">Larger Storage</h5>
-                <p class="pplan2">Extra 1 TB of cloud save</p>            
+                <p class="pplan2">Extra 1 TB of cloud save</p>
               </div>
               <p class="pplan addon mt-3" *ngIf="monthly">+$2/mo</p>
               <p class="pplan addon mt-3" *ngIf="!monthly">+$20/yr</p>
@@ -164,45 +255,123 @@
 
           <div class="container-plans mt-2">
             <div class="plan plan-addons" [class.plan-active]="checkedProfile">
-              <input type="checkbox" name="profile" id="profile" [(ngModel)]="checkedProfile">
+              <input
+                type="checkbox"
+                name="profile"
+                id="profile"
+                [(ngModel)]="checkedProfile"
+              />
               <div class="plan-description2">
                 <h5 class="hplan">Custom profile</h5>
-                <p class="pplan2">Custom theme on your profile</p>            
+                <p class="pplan2">Custom theme on your profile</p>
               </div>
               <p class="pplan addon mt-3" *ngIf="monthly">+$2/mo</p>
               <p class="pplan addon mt-3" *ngIf="!monthly">+$20/yr</p>
             </div>
           </div>
-           
         </div>
         <div class="container-buttons2">
           <p class="goback" (click)="goBackStep2()">Go Back</p>
-          <div class="button-next2"><p class="pnext" (click)="goStep4()">Next Step</p></div>
+          <div class="button-next2">
+            <p class="pnext" (click)="goStep4()">Next Step</p>
+          </div>
         </div>
       </div>
-
-
 
       <div class="step2" *ngIf="step === 4">
         <div class="form">
           <h1 class="step-title">Finishing up</h1>
-          <p class="pstep-title">Double-check everything looks OK before confirming</p>
+          <p class="pstep-title">
+            Double-check everything looks OK before confirming
+          </p>
 
           <div class="container-confirm">
             <div class="first-summary">
               <div class="first-summary-left">
-                <h5 class="hplan">Arcade <span class="monthly-summary">(Monthly)</span></h5>
+                <h5 class="hplan" *ngIf="arcade">
+                  Arcade
+                  <span class="monthly-summary" *ngIf="monthly">(Monthly)</span
+                  ><span class="monthly-summary" *ngIf="!monthly"
+                    >(Yearly)</span
+                  >
+                </h5>
+                <h5 class="hplan" *ngIf="advanced">
+                  Advanced
+                  <span class="monthly-summary" *ngIf="monthly">(Monthly)</span
+                  ><span class="monthly-summary" *ngIf="!monthly"
+                    >(Yearly)</span
+                  >
+                </h5>
+                <h5 class="hplan" *ngIf="pro">
+                  Pro
+                  <span class="monthly-summary" *ngIf="monthly">(Monthly)</span
+                  ><span class="monthly-summary" *ngIf="!monthly"
+                    >(Yearly)</span
+                  >
+                </h5>
+                <a class="gochange" (click)="goStep2()">Change</a>
+              </div>
+              <p class="pplan-summary" *ngIf="monthly && arcade">+$9/mo</p>
+              <p class="pplan-summary" *ngIf="monthly && advanced">+$12/mo</p>
+              <p class="pplan-summary" *ngIf="monthly && pro">+$15/mo</p>
+
+              <p class="pplan-summary" *ngIf="!monthly && arcade">+$90/yr</p>
+              <p class="pplan-summary" *ngIf="!monthly && advanced">+$120/yr</p>
+              <p class="pplan-summary" *ngIf="!monthly && pro">+$150/yr</p>
+            </div>
+            <hr />
+            <div class="second-summary">
+              <div class="addon-summary" *ngIf="checkedOnline">
+                <p class="paddon-summary">Online Service</p>
+                <p class="price-addon-summary" *ngIf="monthly">+$1/mo</p>
+                <p class="price-addon-summary" *ngIf="!monthly">+$10/yr</p>
+              </div>
+
+              <div class="addon-summary" *ngIf="checkedStorage">
+                <p class="paddon-summary">Larger Storage</p>
+                <p class="price-addon-summary" *ngIf="monthly">+$2/mo</p>
+                <p class="price-addon-summary" *ngIf="!monthly">+$20/yr</p>
+              </div>
+
+              <div class="addon-summary" *ngIf="checkedProfile">
+                <p class="paddon-summary">Custom Profile</p>
+                <p class="price-addon-summary" *ngIf="monthly">+$2/mo</p>
+                <p class="price-addon-summary" *ngIf="!monthly">+$20/yr</p>
               </div>
             </div>
           </div>
-                
+
+          <div class="total">
+            <p class="paddon-summary" *ngIf="monthly">Total (per Month)</p>
+            <p class="paddon-summary" *ngIf="!monthly">Total (per Year)</p>
+            <p class="ptotal" *ngIf="monthly">+${{ total }}/mo</p>
+            <p class="ptotal" *ngIf="!monthly">+${{ total }}/yr</p>
+          </div>
         </div>
         <div class="container-buttons2">
           <p class="goback" (click)="goBackStep3()">Go Back</p>
-          <div class="button-next2"><p class="pnext" (click)="ConfirmAll()">Confirm</p></div>
+          <div class="confirmButton">
+            <p class="pnext" (click)="ConfirmAll()">Confirm</p>
+          </div>
         </div>
       </div>
-      
+
+      <div class="step2" *ngIf="step === 5">
+        <div class="form">
+          <div class="container-end">
+            <img
+              src="../assets/images/icon-thank-you.svg"
+              alt="icon complete"
+            />
+            <h1 class="hthanks mt-3">Thank you!</h1>
+            <p class="pthanks">
+              Thanks for confirming your suscription! We hope you have fun using
+              our platform. If you ever need support, please feel free to email
+              us at support@loremgamming.com.
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 </main>
